@@ -265,10 +265,13 @@ void Manager::verifyFolderItem(const QModelIndex &folderItemIndex)
             emit showMessage(QString("%1 out of %2 files is changed or corrupted")
                                  .arg(dataMaintainer->data_->numbers.numberOf(FileStatus::Mismatched))
                                  .arg(dataMaintainer->data_->numbers.available()), "FAILED");
-        else if (numMatched > 0)
+        else if (numMatched > 0) {
             emit showMessage(QString("ALL %1 files passed the verification.\nStored %2 checksums matched.")
                                  .arg(numMatched)
                                  .arg(format::algoToStr(dataMaintainer->data_->metaData.algorithm)), "Success");
+
+            dataMaintainer->updateSuccessfulCheckDateTime();
+        }
     }
     else {// if subfolder
         QString subfolderName = TreeModel::siblingAtRow(folderItemIndex, Column::ColumnPath).data().toString();
